# qhttpfileserver

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  httpfileserver.cpp  main.cpp  resource.qrc  util.cpp
html/: index-template.html
router/: filerouter.cpp
